[package]
name = "py_monte_carlo"
version = "2.16.3"
authors = ["Sumner Hearth <sumnernh@gmail.com>"]
edition = "2018"

[lib]
name = "py_monte_carlo"
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
itertools = "^0.10"
rand = {version = "^0.8", features = ["small_rng"]}
rayon = "^1.5"
serde_cbor = "^0.11"

[dependencies.numpy]
version = "^0.13"
features = ["rayon"]

[dependencies.qmc]
version = "^2.16.3"
features = ["autocorrelations", "parallel-tempering", "serialize", "nightly"]

[dependencies.pyo3]
version = "^0.13"
features = ["extension-module"]

[dependencies.ndarray]
version = "^0.14"
features = ["rayon"]